src/compiler/y.output
   0  $accept : jeda $end

   1  jeda : translation_units

   2  translation_units : translation_unit
   3                    | translation_units translation_unit
   4                    | error
   5                    | translation_units error

   6  translation_unit : port_definition
   7                   | portset_definition
   8                   | connectionset_definition
   9                   | local_global_variable_declaration
  10                   | top_initial_statement
  11                   | type_definition
  12                   | function_definition
  13                   | class_definition
  14                   | verilog_class_definition
  15                   | aspect_definition

  16  port_definition : port_declaration

  17  port_declaration : port_direction opt_bit_range port_name opt_port_attribs semicolon

  18  port_direction : JDT_input
  19                 | JDT_output
  20                 | JDT_inout

  21  opt_bit_range :
  22                | bit_range

  23  bit_range : '[' constant ':' constant ']'

  24  port_name : Identifier

  25  opt_port_attribs :
  26                   | port_attribs

  27  port_attribs : port_attrib
  28               | port_attribs port_attrib

  29  port_attrib : clock_attrib
  30              | drive_attrib
  31              | sample_attrib
  32              | depth_attrib
  33              | node_attrib

  34  clock_attrib : '@' clock_port_name

  35  clock_port_name : Identifier
  36                  | Identifier '.' Identifier

  37  drive_attrib : JDT_drive edge_specification opt_skew

  38  sample_attrib : JDT_sample edge_specification opt_skew

  39  opt_skew :
  40           | JDT_skew constant

  41  depth_attrib : JDT_depth constant

  42  node_attrib : JDT_node String_literal

  43  $$1 :

  44  $$2 :

  45  portset_definition : JDT_portset portset_name opt_port_attribs '{' $$1 port_declarations $$2 '}'

  46  portset_name : Identifier

  47  port_declarations : port_declaration
  48                    | port_declarations port_declaration
  49                    | error
  50                    | port_declarations error

  51  connectionset_definition : JDT_connectionset '{' port_connections '}'

  52  port_connections : port_connection
  53                   | port_connections port_connection
  54                   | error
  55                   | port_connections error

  56  port_connection : portset_port String_literal semicolon

  57  portset_port : Identifier '.' Identifier
  58               | Identifier

  59  local_global_variable_declaration : var_definition

  60  $$3 :

  61  top_initial_statement : JDT_initial $$3 statement

  62  $$4 :

  63  initial_statement : JDT_initial $$4 statement

  64  opt_var_enum_definitions :
  65                           | var_enum_definitions

  66  var_enum_definitions : var_enum_definition
  67                       | var_enum_definitions var_enum_definition
  68                       | error
  69                       | var_enum_definitions error

  70  var_enum_definition : var_definition
  71                      | enum_type_definition

  72  var_definition : opt_var_func_attrib var_func_type var_name_list semicolon

  73  var_name_list : var_name
  74                | var_name_list ',' var_name

  75  var_name : Identifier opt_array_range opt_var_init

  76  opt_array_range :
  77                  | array_ranges
  78                  | '[' '*' ']'
  79                  | '[' ']'
  80                  | '<' '>'

  81  array_ranges : array_range
  82               | array_ranges array_range

  83  array_range : '[' constant ']'

  84  opt_var_init :
  85               | var_init

  86  var_init : '=' expression
  87           | '=' new_expression

  88  opt_func_type :
  89                | var_func_type opt_array_range

  90  var_func_type : data_type
  91                | user_data_type

  92  data_type : JDT_void
  93            | JDT_int
  94            | JDT_float
  95            | JDT_double
  96            | JDT_bit opt_bit_range
  97            | JDT_string
  98            | JDT_signal
  99            | JDT_class_type

 100  user_data_type : Identifier

 101  type_definition : enum_type_definition
 102                  | class_type_definition

 103  enum_type_definition : JDT_enum Identifier '=' enum_members_list semicolon

 104  enum_members_list : enum_member
 105                    | enum_members_list ',' enum_member

 106  enum_member : Identifier

 107  class_type_definition : JDT_typedef JDT_class class_name_list semicolon

 108  class_name_list : class_name
 109                  | class_name_list ',' class_name

 110  data_type_name : JDT_array
 111                 | JDT_marray
 112                 | JDT_assoc
 113                 | JDT_stridx
 114                 | JDT_list
 115                 | JDT_string
 116                 | JDT_signal
 117                 | JDT_port

 118  class_name : Identifier
 119             | '.' data_type_name

 120  class_name_ref : Identifier

 121  opt_var_func_attrib :
 122                      | var_func_attribs

 123  var_func_attribs : var_func_attrib
 124                   | var_func_attribs var_func_attrib

 125  var_func_attrib : JDT_static
 126                  | JDT_extern
 127                  | JDT_local
 128                  | JDT_global
 129                  | JDT_protected
 130                  | JDT_abstract
 131                  | JDT_final
 132                  | JDT_export
 133                  | JDT_clone
 134                  | JDT_overwrite

 135  $$5 :

 136  $$6 :

 137  function_definition : opt_var_func_attrib opt_func_type func_name '(' $$5 opt_formal_args ')' $$6 opt_outer_block

 138  func_name : Identifier

 139  opt_outer_block : semicolon
 140                  | block

 141  opt_formal_args :
 142                  | formal_args

 143  formal_args : formal_arg
 144              | formal_args ',' formal_arg

 145  formal_arg : opt_var var_func_type arg_name opt_array_range opt_arg_init
 146             | var_func_type
 147             | '?'
 148             | '(' formal_args ')' '+'
 149             | '(' formal_args ')' '*'
 150             | '(' formal_args ')' '|'
 151             | '[' formal_args ']'

 152  opt_var :
 153          | JDT_var

 154  arg_name : Identifier

 155  opt_arg_init :
 156               | arg_init

 157  arg_init : '=' constant
 158           | '=' string_constant
 159           | '=' bool_null_expression
 160           | '=' enum_expression

 161  enum_expression : Identifier

 162  $$7 :

 163  class_definition : opt_var_func_attrib JDT_class class_name opt_extention $$7 '{' opt_class_items '}'

 164  opt_extention :
 165                | JDT_extends class_name_ref

 166  opt_class_items :
 167                  | class_items

 168  class_items : class_item
 169              | class_items class_item
 170              | error
 171              | class_items error

 172  class_item : var_definition
 173             | enum_type_definition
 174             | initial_statement
 175             | function_definition
 176             | new_function_definition

 177  $$8 :

 178  $$9 :

 179  new_function_definition : opt_void JDT_new '(' $$8 opt_formal_args ')' $$9 opt_new_outer_block

 180  opt_new_outer_block : semicolon
 181                      | new_block

 182  $$10 :

 183  new_block : '{' $$10 opt_var_enum_definitions opt_super_new_call opt_statements '}'

 184  opt_super_new_call :
 185                     | JDT_super '.' JDT_new opt_new_args semicolon

 186  opt_void :
 187           | JDT_void

 188  $$11 :

 189  verilog_class_definition : opt_var_func_attrib JDT_class JDT_verilog '{' $$11 verilog_task_definitions '}'

 190  verilog_task_definitions : verilog_task_definition
 191                           | verilog_task_definitions verilog_task_definition
 192                           | error
 193                           | verilog_task_definitions error

 194  $$12 :

 195  verilog_task_definition : opt_func_type func_name '(' $$12 opt_formal_args ')' String_literal semicolon

 196  aspect_name : Identifier

 197  $$13 :

 198  aspect_definition : opt_extern JDT_aspect aspect_name '{' $$13 opt_aspect_items '}'

 199  opt_extern :
 200             | JDT_extern

 201  opt_aspect_items :
 202                   | aspect_items

 203  aspect_items : aspect_item
 204               | aspect_items aspect_item
 205               | error
 206               | aspect_items error

 207  aspect_item : var_definition
 208              | enum_type_definition
 209              | initial_statement
 210              | function_definition
 211              | advice_definition

 212  advice_name : Identifier

 213  $$14 :

 214  $$15 :

 215  advice_definition : JDT_advice opt_func_type advice_name '(' $$14 opt_formal_args ')' pointcut_specifications $$15 opt_outer_block

 216  pointcut_specifications : pointcut_spec
 217                          | pointcut_specifications pointcut_spec

 218  pointcut_spec : JDT_call '(' pointcut_pattern ')'
 219                | JDT_return '(' pointcut_pattern ')'
 220                | JDT_overwrite '(' pointcut_pattern ')'

 221  pointcut_pattern : pointcut_element
 222                   | pointcut_pattern '.' pointcut_element

 223  pointcut_element : Identifier
 224                   | String_literal

 225  statement : null_statement
 226            | if_else_statement
 227            | while_statement
 228            | for_statement
 229            | repeat_statement
 230            | do_while_statement
 231            | forever_statement
 232            | case_statement
 233            | casex_statement
 234            | casez_statement
 235            | randcase_statement
 236            | break_statement
 237            | continue_statement
 238            | fork_join_statement
 239            | terminate_statement
 240            | breakpoint_statement
 241            | expression_statement
 242            | assign_statement
 243            | function_call_statement
 244            | return_statement
 245            | verilog_task_call_statement
 246            | block

 247  $$16 :

 248  block : '{' $$16 opt_var_enum_definitions opt_statements '}'

 249  opt_statements :
 250                 | statements

 251  statements : statement
 252             | statements statement
 253             | error
 254             | statements error

 255  opt_statement_prefix :
 256                       | cycle_element
 257                       | label
 258                       | label cycle_element

 259  label : Identifier ':'

 260  cycle_element : '@' opt_expression opt_clock_definition

 261  opt_clock_definition :
 262                       | '(' edge_specification port_expression ')'

 263  edge_specification : JDT_posedge
 264                     | JDT_negedge
 265                     | JDT_bothedge
 266                     |

 267  port_expression : varport_expression

 268  null_statement : opt_statement_prefix semicolon

 269  if_else_statement : opt_statement_prefix JDT_if '(' expression ')' statement opt_else

 270  opt_else :
 271           | JDT_else statement

 272  $$17 :

 273  while_statement : opt_statement_prefix JDT_while '(' expression ')' $$17 statement

 274  $$18 :

 275  for_statement : opt_statement_prefix JDT_for '(' opt_multi_expressions ';' opt_expression ';' opt_multi_expressions ')' $$18 statement

 276  opt_multi_expressions :
 277                        | multi_expressions

 278  multi_expressions : for_expression
 279                    | multi_expressions ',' for_expression

 280  for_expression : state_expression
 281                 | assign_expression

 282  $$19 :

 283  repeat_statement : opt_statement_prefix JDT_repeat '(' expression ')' $$19 statement

 284  $$20 :

 285  do_while_statement : opt_statement_prefix JDT_do $$20 statement JDT_while '(' expression ')' semicolon

 286  $$21 :

 287  forever_statement : opt_statement_prefix JDT_forever $$21 statement

 288  case_statement : opt_statement_prefix JDT_case '(' expression ')' '{' opt_case_items '}'

 289  opt_case_items :
 290                 | case_items

 291  case_items : case_item
 292             | case_items case_item

 293  case_item : expression_list ':' statement
 294            | JDT_default ':' statement

 295  expression_list : expression
 296                  | expression_list ',' expression

 297  casex_statement : opt_statement_prefix JDT_casex '(' expression ')' '{' opt_case_items '}'

 298  casez_statement : opt_statement_prefix JDT_casez '(' expression ')' '{' opt_case_items '}'

 299  randcase_statement : opt_statement_prefix JDT_randcase '{' opt_randcase_items '}'

 300  opt_randcase_items :
 301                     | randcase_items

 302  randcase_items : randcase_item
 303                 | randcase_items randcase_item

 304  randcase_item : Decimal_num ':' statement

 305  break_statement : opt_statement_prefix JDT_break opt_exit_label semicolon

 306  opt_exit_label :
 307                 | Identifier

 308  continue_statement : opt_statement_prefix JDT_continue opt_exit_label semicolon

 309  fork_join_statement : opt_statement_prefix JDT_fork statements joins

 310  joins : JDT_join
 311        | JDT_spoon
 312        | JDT_knife

 313  terminate_statement : opt_statement_prefix JDT_terminate semicolon

 314  breakpoint_statement : opt_statement_prefix JDT_breakpoint opt_string semicolon

 315  opt_string :
 316             | String_literal

 317  expression_statement : opt_statement_prefix state_expression semicolon

 318  assign_statement : opt_statement_prefix assign_expression opt_strength semicolon

 319  opt_strength :
 320               | JDT_weak
 321               | JDT_strong

 322  function_call_statement : opt_statement_prefix function_call_expression semicolon

 323  return_statement : JDT_return opt_expression semicolon

 324  verilog_task_call_statement : JDT_verilog '.' Identifier '(' opt_actual_arguments ')' semicolon

 325  number : Real_num
 326         | Real_or_Depth
 327         | Decimal_num
 328         | V_decimal_num
 329         | C_decimal_num
 330         | V_hex_num
 331         | C_hex_num
 332         | V_octal_num
 333         | C_octal_num
 334         | V_bin_num
 335         | C_bin_num

 336  constant : number
 337           | constant '-' constant
 338           | constant '+' constant
 339           | constant '*' constant
 340           | constant '/' constant
 341           | constant '%' constant
 342           | constant '&' constant
 343           | constant '|' constant
 344           | constant '^' constant
 345           | constant JD_ANDTILDA constant
 346           | constant JD_TILDAAND constant
 347           | constant JD_ORTILDA constant
 348           | constant JD_TILDAOR constant
 349           | constant JD_EORTILDA constant
 350           | constant JD_TILDAEOR constant
 351           | constant JD_LAND constant
 352           | constant JD_LOR constant
 353           | constant JD_RSHIFT constant
 354           | constant JD_URSHIFT constant
 355           | constant JD_LSHIFT constant
 356           | constant '<' constant
 357           | constant '>' constant
 358           | constant JD_EQEQ constant
 359           | constant JD_LE constant
 360           | constant JD_GE constant
 361           | constant JD_NE constant
 362           | constant JD_EQEQEQ constant
 363           | constant JD_NEQEQ constant
 364           | constant JD_Q_EQ constant
 365           | constant JD_Q_NEQ constant
 366           | constant JD_EQEQQ constant
 367           | constant JD_QEQEQ constant
 368           | '-' constant
 369           | '~' constant
 370           | '!' constant
 371           | '&' constant
 372           | '|' constant
 373           | '^' constant
 374           | JD_TILDAAND constant
 375           | JD_ANDTILDA constant
 376           | JD_TILDAOR constant
 377           | JD_ORTILDA constant
 378           | JD_EORTILDA constant
 379           | JD_TILDAEOR constant
 380           | constant JD_C_EQEQ constant ':' constant
 381           | constant '?' constant ':' constant
 382           | '(' constant ')'
 383           | constant_concatenation

 384  constant_concatenation : '{' constant_list '}'
 385                         | '{' constant '{' constant '}' '}'

 386  constant_list : constant
 387                | constant_list ',' constant

 388  string_constant : String_literal
 389                  | '{' string_list '}'
 390                  | '{' constant '{' string_constant '}' '}'
 391                  | constant '?' string_constant ':' string_constant
 392                  | '(' string_constant ')'

 393  string_list : string_constant
 394              | string_list ',' string_constant

 395  expression : number
 396             | JDT_return
 397             | string_constant
 398             | timed_expression
 399             | parallel_eval_expression
 400             | varport_expression
 401             | bool_null_expression
 402             | function_call_expression
 403             | state_expression
 404             | concatenation_expression
 405             | list_expression
 406             | expression '-' expression
 407             | expression '+' expression
 408             | expression '*' expression
 409             | expression '/' expression
 410             | expression '%' expression
 411             | expression '&' expression
 412             | expression '|' expression
 413             | expression '^' expression
 414             | expression JD_ANDTILDA expression
 415             | expression JD_TILDAAND expression
 416             | expression JD_ORTILDA expression
 417             | expression JD_TILDAOR expression
 418             | expression JD_EORTILDA expression
 419             | expression JD_TILDAEOR expression
 420             | expression JD_LAND expression
 421             | expression JD_LOR expression
 422             | expression JD_RSHIFT expression
 423             | expression JD_URSHIFT expression
 424             | expression JD_LSHIFT expression
 425             | expression '<' expression
 426             | expression '>' expression
 427             | expression JD_EQEQ expression
 428             | expression JD_LE expression
 429             | expression JD_GE expression
 430             | expression JD_NE expression
 431             | expression JD_EQEQEQ expression
 432             | expression JD_NEQEQ expression
 433             | expression JD_Q_EQ expression
 434             | expression JD_Q_NEQ expression
 435             | expression JD_EQEQQ expression
 436             | expression JD_QEQEQ expression
 437             | '-' expression
 438             | '~' expression
 439             | '!' expression
 440             | '&' expression
 441             | '|' expression
 442             | '^' expression
 443             | JD_TILDAAND expression
 444             | JD_ANDTILDA expression
 445             | JD_TILDAOR expression
 446             | JD_ORTILDA expression
 447             | JD_EORTILDA expression
 448             | JD_TILDAEOR expression
 449             | expression JD_C_EQEQ expression ':' expression
 450             | expression '?' expression ':' expression
 451             | '(' expression ')'
 452             | static_random

 453  opt_expression :
 454                 | expression

 455  static_random : JDT_RND '(' opt_rand_args ')'
 456                | JDT_CYC '(' opt_rand_args ')'

 457  opt_rand_args :
 458                | rand_args

 459  rand_args : rand_arg
 460            | rand_args ',' rand_arg

 461  rand_arg : rand_range
 462           | rand_parm
 463           | rand_cond

 464  rand_range : '{' rand_values '}'

 465  rand_values : rand_value
 466              | rand_values ',' rand_value

 467  rand_value : rand_val
 468             | rand_val '@' constant
 469             | rand_val JD_D_AT constant

 470  rand_val : rnd_constant
 471           | rnd_constant ':' rnd_constant

 472  rnd_constant : Decimal_num
 473               | V_decimal_num
 474               | C_decimal_num
 475               | V_hex_num
 476               | C_hex_num
 477               | V_octal_num
 478               | C_octal_num
 479               | V_bin_num
 480               | C_bin_num

 481  rnd_string : String_literal

 482  rand_parm : Identifier '=' rnd_constant
 483            | Identifier '=' rnd_string

 484  rand_cond : '<' expression
 485            | '>' expression
 486            | JD_LE expression
 487            | JD_GE expression
 488            | JD_NE expression
 489            | JD_Q_EQ expression
 490            | JD_Q_NEQ expression

 491  timed_expression : time_range '(' expression_list ')'

 492  time_range : '@' expression opt_clock_definition
 493             | '@' opt_expression ',' expression opt_clock_definition
 494             | JD_D_AT expression opt_clock_definition
 495             | JD_D_AT opt_expression ',' expression opt_clock_definition

 496  parallel_eval_expression : parallel_primitive '(' timed_expression_list ')'

 497  parallel_primitive : JDT_p_and
 498                     | JDT_p_or

 499  timed_expression_list : timed_expression
 500                        | timed_expression_list ',' timed_expression

 501  bool_null_expression : JDT_null
 502                       | JDT_true
 503                       | JDT_false

 504  state_expression : varport_expression JD_D_PLUS
 505                   | varport_expression JD_D_MINUS
 506                   | JD_D_PLUS varport_expression
 507                   | JD_D_MINUS varport_expression

 508  concatenation_expression : '{' expression_list '}'
 509                           | '{' expression '{' expression '}' '}'

 510  list_expression : '\'' '{' expression_list '}'

 511  varport_expression : a_ver_expression
 512                     | varport_expression '.' Identifier opt_depth opt_access_range
 513                     | varport_expression '.' JDT_super

 514  a_ver_expression : Identifier opt_depth opt_access_range
 515                   | JDT_super
 516                   | JDT_this

 517  opt_depth :
 518            | Real_or_Depth

 519  opt_access_range :
 520                   | access_range

 521  access_range : array_access_ranges
 522               | array_access_ranges bit_access_range
 523               | bit_access_range

 524  bit_access_range : '[' expression ':' expression ']'

 525  array_access_ranges : array_access_range
 526                      | array_access_ranges array_access_range

 527  array_access_range : '[' expression ']'

 528  function_call_expression : varport_expression '(' opt_actual_arguments ')'

 529  opt_actual_arguments :
 530                       | actual_arguments

 531  actual_arguments : actual_argument
 532                   | actual_arguments ',' actual_argument

 533  actual_argument : expression
 534                  | '*'

 535  new_expression : JDT_new opt_new_args opt_new_object

 536  opt_new_args :
 537               | '(' ')'
 538               | '(' actual_arguments ')'

 539  opt_new_object :
 540                 | left_expression
 541                 | block

 542  assign_expression : left_expression assign_opr expression
 543                    | left_expression '=' new_expression
 544                    | list_expression '=' expression

 545  left_expression : varport_expression

 546  assign_opr : '='
 547             | JD_LE
 548             | JD_PLUS_EQ
 549             | JD_MINUS_EQ
 550             | JD_STAR_EQ
 551             | JD_SLSH_EQ
 552             | JD_MOD_EQ
 553             | JD_RSHIFT_EQ
 554             | JD_URSHIFT_EQ
 555             | JD_LSHIFT_EQ
 556             | JD_AND_EQ
 557             | JD_OR_EQ
 558             | JD_EOR_EQ
 559             | JD_NAND_EQ
 560             | JD_ANDN_EQ
 561             | JD_NOR_EQ
 562             | JD_ORN_EQ
 563             | JD_NEOR_EQ
 564             | JD_EORN_EQ

 565  semicolon : ';'

state 0
	$accept : . jeda $end  (0)
	opt_var_func_attrib : .  (121)
	opt_extern : .  (199)

	error  shift 1
	JDT_abstract  shift 2
	JDT_clone  shift 3
	JDT_connectionset  shift 4
	JDT_enum  shift 5
	JDT_export  shift 6
	JDT_extern  shift 7
	JDT_final  shift 8
	JDT_global  shift 9
	JDT_initial  shift 10
	JDT_inout  shift 11
	JDT_input  shift 12
	JDT_local  shift 13
	JDT_output  shift 14
	JDT_overwrite  shift 15
	JDT_portset  shift 16
	JDT_protected  shift 17
	JDT_static  shift 18
	JDT_typedef  shift 19
	Identifier  reduce 121
	JDT_aspect  reduce 199
	JDT_bit  reduce 121
	JDT_class  reduce 121
	JDT_class_type  reduce 121
	JDT_double  reduce 121
	JDT_float  reduce 121
	JDT_int  reduce 121
	JDT_signal  reduce 121
	JDT_string  reduce 121
	JDT_void  reduce 121

	jeda  goto 20
	translation_units  goto 21
	translation_unit  goto 22
	portset_definition  goto 23
	connectionset_definition  goto 24
	local_global_variable_declaration  goto 25
	top_initial_statement  goto 26
	function_definition  goto 27
	class_definition  goto 28
	verilog_class_definition  goto 29
	port_definition  goto 30
	aspect_definition  goto 31
	port_declaration  goto 32
	var_definition  goto 33
	enum_type_definition  goto 34
	type_definition  goto 35
	opt_var_func_attrib  goto 36
	var_func_attribs  goto 37
	var_func_attrib  goto 38
	opt_extern  goto 39
	class_type_definition  goto 40
	port_direction  goto 41


state 1
	translation_units : error .  (4)

	.  reduce 4


state 2
	var_func_attrib : JDT_abstract .  (130)

	.  reduce 130


state 3
	var_func_attrib : JDT_clone .  (133)

	.  reduce 133


state 4
	connectionset_definition : JDT_connectionset . '{' port_connections '}'  (51)

	'{'  shift 42
	.  error


state 5
	enum_type_definition : JDT_enum . Identifier '=' enum_members_list semicolon  (103)

	Identifier  shift 43
	.  error


state 6
	var_func_attrib : JDT_export .  (132)

	.  reduce 132


state 7
	var_func_attrib : JDT_extern .  (126)
	opt_extern : JDT_extern .  (200)

	Identifier  reduce 126
	JDT_abstract  reduce 126
	JDT_aspect  reduce 200
	JDT_bit  reduce 126
	JDT_class  reduce 126
	JDT_class_type  reduce 126
	JDT_clone  reduce 126
	JDT_double  reduce 126
	JDT_export  reduce 126
	JDT_extern  reduce 126
	JDT_final  reduce 126
	JDT_float  reduce 126
	JDT_global  reduce 126
	JDT_int  reduce 126
	JDT_local  reduce 126
	JDT_overwrite  reduce 126
	JDT_protected  reduce 126
	JDT_signal  reduce 126
	JDT_static  reduce 126
	JDT_string  reduce 126
	JDT_void  reduce 126


state 8
	var_func_attrib : JDT_final .  (131)

	.  reduce 131


state 9
	var_func_attrib : JDT_global .  (128)

	.  reduce 128


state 10
	top_initial_statement : JDT_initial . $$3 statement  (61)
	$$3 : .  (60)

	.  reduce 60

	$$3  goto 44


state 11
	port_direction : JDT_inout .  (20)

	.  reduce 20


state 12
	port_direction : JDT_input .  (18)

	.  reduce 18


state 13
	var_func_attrib : JDT_local .  (127)

	.  reduce 127


state 14
	port_direction : JDT_output .  (19)

	.  reduce 19


state 15
	var_func_attrib : JDT_overwrite .  (134)

	.  reduce 134


state 16
	portset_definition : JDT_portset . portset_name opt_port_attribs '{' $$1 port_declarations $$2 '}'  (45)

	Identifier  shift 45
	.  error

	portset_name  goto 46


state 17
	var_func_attrib : JDT_protected .  (129)

	.  reduce 129


state 18
	var_func_attrib : JDT_static .  (125)

	.  reduce 125


state 19
	class_type_definition : JDT_typedef . JDT_class class_name_list semicolon  (107)

	JDT_class  shift 47
	.  error


state 20
	$accept : jeda . $end  (0)

	$end  accept


state 21
	jeda : translation_units .  (1)
	translation_units : translation_units . translation_unit  (3)
	translation_units : translation_units . error  (5)
	opt_var_func_attrib : .  (121)
	opt_extern : .  (199)

	error  shift 48
	JDT_abstract  shift 2
	JDT_clone  shift 3
	JDT_connectionset  shift 4
	JDT_enum  shift 5
	JDT_export  shift 6
	JDT_extern  shift 7
	JDT_final  shift 8
	JDT_global  shift 9
	JDT_initial  shift 10
	JDT_inout  shift 11
	JDT_input  shift 12
	JDT_local  shift 13
	JDT_output  shift 14
	JDT_overwrite  shift 15
	JDT_portset  shift 16
	JDT_protected  shift 17
	JDT_static  shift 18
	JDT_typedef  shift 19
	$end  reduce 1
	Identifier  reduce 121
	JDT_aspect  reduce 199
	JDT_bit  reduce 121
	JDT_class  reduce 121
	JDT_class_type  reduce 121
	JDT_double  reduce 121
	JDT_float  reduce 121
	JDT_int  reduce 121
	JDT_signal  reduce 121
	JDT_string  reduce 121
	JDT_void  reduce 121

	translation_unit  goto 49
	portset_definition  goto 23
	connectionset_definition  goto 24
	local_global_variable_declaration  goto 25
	top_initial_statement  goto 26
	function_definition  goto 27
	class_definition  goto 28
	verilog_class_definition  goto 29
	port_definition  goto 30
	aspect_definition  goto 31
	port_declaration  goto 32
	var_definition  goto 33
	enum_type_definition  goto 34
	type_definition  goto 35
	opt_var_func_attrib  goto 36
	var_func_attribs  goto 37
	var_func_attrib  goto 38
	opt_extern  goto 39
	class_type_definition  goto 40
	port_direction  goto 41


state 22
	translation_units : translation_unit .  (2)

	.  reduce 2


state 23
	translation_unit : portset_definition .  (7)

	.  reduce 7


state 24
	translation_unit : connectionset_definition .  (8)

	.  reduce 8


state 25
	translation_unit : local_global_variable_declaration .  (9)

	.  reduce 9


state 26
	translation_unit : top_initial_statement .  (10)

	.  reduce 10


state 27
	translation_unit : function_definition .  (12)

	.  reduce 12


state 28
	translation_unit : class_definition .  (13)

	.  reduce 13


state 29
	translation_unit : verilog_class_definition .  (14)

	.  reduce 14


state 30
	translation_unit : port_definition .  (6)

	.  reduce 6


state 31
	translation_unit : aspect_definition .  (15)

	.  reduce 15


state 32
	port_definition : port_declaration .  (16)

	.  reduce 16


state 33
	local_global_variable_declaration : var_definition .  (59)

	.  reduce 59


state 34
	type_definition : enum_type_definition .  (101)

	.  reduce 101


state 35
	translation_unit : type_definition .  (11)

	.  reduce 11


36: shift/reduce conflict (shift 50, reduce 88) on Identifier
state 36
	var_definition : opt_var_func_attrib . var_func_type var_name_list semicolon  (72)
	function_definition : opt_var_func_attrib . opt_func_type func_name '(' $$5 opt_formal_args ')' $$6 opt_outer_block  (137)
	class_definition : opt_var_func_attrib . JDT_class class_name opt_extention $$7 '{' opt_class_items '}'  (163)
	verilog_class_definition : opt_var_func_attrib . JDT_class JDT_verilog '{' $$11 verilog_task_definitions '}'  (189)
	opt_func_type : .  (88)

	JDT_bit  shift 51
	JDT_class  shift 52
	JDT_class_type  shift 53
	JDT_double  shift 54
	JDT_float  shift 55
	JDT_int  shift 56
	JDT_signal  shift 57
	JDT_string  shift 58
	JDT_void  shift 59

	opt_func_type  goto 60
	var_func_type  goto 61
	data_type  goto 62
	user_data_type  goto 63


state 37
	opt_var_func_attrib : var_func_attribs .  (122)
	var_func_attribs : var_func_attribs . var_func_attrib  (124)

	JDT_abstract  shift 2
	JDT_clone  shift 3
	JDT_export  shift 6
	JDT_extern  shift 64
	JDT_final  shift 8
	JDT_global  shift 9
	JDT_local  shift 13
	JDT_overwrite  shift 15
	JDT_protected  shift 17
	JDT_static  shift 18
	Identifier  reduce 122
	JDT_bit  reduce 122
	JDT_class  reduce 122
	JDT_class_type  reduce 122
	JDT_double  reduce 122
	JDT_float  reduce 122
	JDT_int  reduce 122
	JDT_signal  reduce 122
	JDT_string  reduce 122
	JDT_void  reduce 122

	var_func_attrib  goto 65


state 38
	var_func_attribs : var_func_attrib .  (123)

	.  reduce 123


state 39
	aspect_definition : opt_extern . JDT_aspect aspect_name '{' $$13 opt_aspect_items '}'  (198)

	JDT_aspect  shift 66
	.  error


state 40
	type_definition : class_type_definition .  (102)

	.  reduce 102


state 41
	port_declaration : port_direction . opt_bit_range port_name opt_port_attribs semicolon  (17)
	opt_bit_range : .  (21)

	'['  shift 67
	Identifier  reduce 21

	opt_bit_range  goto 68
	bit_range  goto 69


state 42
	connectionset_definition : JDT_connectionset '{' . port_connections '}'  (51)

	error  shift 70
	Identifier  shift 71
	.  error

	portset_port  goto 72
	port_connections  goto 73
	port_connection  goto 74


state 43
	enum_type_definition : JDT_enum Identifier . '=' enum_members_list semicolon  (103)

	'='  shift 75
	.  error


44: shift/reduce conflict (shift 76, reduce 255) on Identifier
state 44
	top_initial_statement : JDT_initial $$3 . statement  (61)
	opt_statement_prefix : .  (255)

	JDT_return  shift 77
	JDT_verilog  shift 78
	'@'  shift 79
	'{'  shift 80
	';'  reduce 255
	JDT_break  reduce 255
	JDT_breakpoint  reduce 255
	JDT_case  reduce 255
	JDT_casex  reduce 255
	JDT_casez  reduce 255
	JDT_continue  reduce 255
	JDT_do  reduce 255
	JDT_for  reduce 255
	JDT_forever  reduce 255
	JDT_fork  reduce 255
	JDT_if  reduce 255
	JDT_randcase  reduce 255
	JDT_repeat  reduce 255
	JDT_super  reduce 255
	JDT_terminate  reduce 255
	JDT_this  reduce 255
	JDT_while  reduce 255
	JD_D_PLUS  reduce 255
	JD_D_MINUS  reduce 255
	'\''  reduce 255

	opt_statement_prefix  goto 81
	cycle_element  goto 82
	verilog_task_call_statement  goto 83
	statement  goto 84
	block  goto 85
	null_statement  goto 86
	if_else_statement  goto 87
	while_statement  goto 88
	for_statement  goto 89
	repeat_statement  goto 90
	do_while_statement  goto 91
	forever_statement  goto 92
	case_statement  goto 93
	casex_statement  goto 94
	casez_statement  goto 95
	randcase_statement  goto 96
	break_statement  goto 97
	continue_statement  goto 98
	fork_join_statement  goto 99
	terminate_statement  goto 100
	breakpoint_statement  goto 101
	expression_statement  goto 102
	assign_statement  goto 103
	return_statement  goto 104
	function_call_statement  goto 105
	label  goto 106


state 45
	portset_name : Identifier .  (46)

	.  reduce 46


state 46
	portset_definition : JDT_portset portset_name . opt_port_attribs '{' $$1 port_declarations $$2 '}'  (45)
	opt_port_attribs : .  (25)
